@@ -5,16 +5,16 @@ import java.util.List;
 import fr.uga.l3miage.pc.prisonersdilemma.classes.PartieIterative;
 import fr.uga.l3miage.pc.prisonersdilemma.classes.PartieJouee;
 
-public class Strategie_pavlov extends Strategie{
+public class StrategiePavlov extends Strategie{
     @Override
     public boolean jouer(List<PartieJouee> historique){
         if(historique.isEmpty()){
             return true;
         } else {
-            if(historique.get(historique.size() -1).resultat_joueur > PartieIterative.PIEGEE){
-                return historique.get(historique.size() -1).choix_joueur;
+            if(historique.getLast().resultat_joueur > PartieIterative.PIEGEE){
+                return historique.getLast().choix_joueur;
             } else {
-                return !(historique.get(historique.size() -1).choix_joueur);
+                return !(historique.getLast().choix_joueur);
             }
         }
     }
